<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitebg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/googlebg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_shape_cornered_gray"
        android:orientation="vertical"
        android:padding="18dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:hint="@string/enter_your_name"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_shape_cornered_gray"
        android:orientation="vertical"
        android:padding="18dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:hint="@string/enter_your_email"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_shape_cornered_gray"
        android:orientation="vertical"
        android:padding="18dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edcontactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:hint="@string/enter_your_contact_number"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutID"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_shape_cornered_gray"
        android:orientation="vertical"
        android:padding="18dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEnterID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:hint="@string/enter_id_you_want_to_update_or_delete"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:weightSum="5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/btn_blue_cornered_login"
            android:fontFamily="sans-serif"
            android:text="@string/add_data"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnupdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:src="@drawable/ic_baseline_edit_24"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btndelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:src="@drawable/ic_baseline_delete_24"
            android:text="@string/add_data"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>